# snippets

boost/: .gitignore  Makefile  accumulate.cpp  cdf.cpp  filesystem.cpp  iter_split.cpp  threadpool.cpp  tokenizer.cpp
dmp/: .gitignore  Makefile  README  dmp.cpp  openCV_dmp.cpp  openCV_dmp.hpp
eigen_dmp/: Makefile  eigen_dmp.cpp
gsl_wavelet/: .gitignore  Makefile  dwt.c  dwt2.c
imagemagick/: Makefile  jpeg_from_buffer.cpp
libsst/: .gitignore  Makefile.am
libsst/doc/: Doxyfile  header.html
libsst/src/: .gitignore  BruteForceSum.cpp  InternalNode.h  Node.cpp  SortedSumTree.cpp  SortedSumTree.h  Statistics.cpp  Timing.cpp
libsst/tests/: .gitignore
magick++/: .gitignore  Makefile  test.cpp
polygonize/: polygonize.cbp  polygonize.cpp  polygonize.depend
splitRandomly/: .cvsignore  .gitignore  Makefile  main.cpp
sst/app/: .gitignore  configure.ac
sst/app/src/: .gitignore  DataGeneration.cpp  DataGeneration.h  ExperimentFunctions.cpp  ExperimentFunctions.h  Makefile.am  PrettyPrinting.cpp  PrettyPrinting.h  SST_Experiment.cpp  SST_Experiment.h  Statistics.cpp  Statistics.h  VectorSortWithIndex.h
sst/libsst/: configure.ac  genTestData.sh
sst/libsst/src/: BruteForceSum.h  InternalNode.cpp  Makefile.am  Node.h  Statistics.h  Timing.h
sst/libsst/tests/: Makefile.am  NodeTestSuite.h  StatsTestSuite.h  foo.txt
